playbooks/files/proxy/iptables
# Generated by iptables-save v1.4.21 on Sun Mar  5 21:59:27 2023
*filter
:INPUT DROP [2:120]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [142:243780]
-A INPUT -i lo -j ACCEPT
-A INPUT -s 192.168.31.98/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 192.168.10.1/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -s 10.0.2.0/24 -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 3 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 11 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
COMMIT
# Completed on Sun Mar  5 21:59:27 2023
